# IMsystem_rs

./: README.md
mqttserver_rs/: Cargo.toml
mqttserver_rs/src/: main.rs
rocket_apiserver/: .env  Cargo.toml  Rocket.toml  example.env  example_env.md  makefile
rocket_apiserver/data/: noteDB_v2.sql  noteDB_v3.sql  thisSQL_mariadb.sql  ³]©w.txt
rocket_apiserver/src/: main.rs
rocket_apiserver/src/api/: auth.rs  basic.rs  message.rs  mod.rs  service.rs  todo.rs  websocket.rs
rocket_apiserver/src/ds/: ds_auth.rs  ds_ex.rs  ds_faq.rs  ds_todo.rs  ds_user.rs  mod.rs
rocket_apiserver/src/module/: database.rs  format_str.rs  mod.rs
