[package]
name = "rocket_apiserver"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 'z'         # 調整最佳化等級: 最佳化輸出二進制檔案大小，但也會關閉循環向量化
lto = true              # LTO(鏈結時間最佳化) = enable
codegen-units = 1       # 調整並行程式碼產生單元數量
panic = "abort"         # 無條件 abort
strip = true            # 去除（對正常運作）無用的符號資訊

[profile.release]
opt-level = 'z'         # 調整最佳化等級: 最佳化輸出二進制檔案大小，但也會關閉循環向量化
lto = true              # LTO(鏈結時間最佳化) = enable
codegen-units = 1       # 調整並行程式碼產生單元數量
panic = "abort"         # 無條件 abort
strip = true            # 去除（對正常運作）無用的符號資訊

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
rand_core = "0.6.4"
rocket = { version = "0.5.1", features = ["json"] }
rocket_codegen = "0.5.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-async-std-native-tls"] }
